Fixed bug #34068 (Numeric string as array key not cast to integer in wddx_deserialize()).